// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Error /> should set the gutters 1`] = `
<div
  class="Hook-error"
  data-testid="error"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root-161 MuiSvgIcon-colorDisabled-166"
    focusable="false"
    role="presentation"
    style="font-size: 80px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M15.73 3H8.27L3 8.27v7.46L8.27 21h7.46L21 15.73V8.27L15.73 3zM12 17.3c-.72 0-1.3-.58-1.3-1.3 0-.72.58-1.3 1.3-1.3.72 0 1.3.58 1.3 1.3 0 .72-.58 1.3-1.3 1.3zm1-4.3h-2V7h2v6z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
  <p
    class="MuiTypography-root-170 MuiTypography-body1-179 Hook-text"
  >
    Oops, something went wrong
  </p>
  <button
    class="MuiButtonBase-root-231 MuiButton-root-205 MuiButton-text-207 MuiButton-textPrimary-208 MuiButton-flat-210 MuiButton-flatPrimary-211"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-206"
    >
      Retry
    </span>
    <span
      class="MuiTouchRipple-root-234"
    />
  </button>
</div>
`;

exports[`<Error /> should set the gutters 2`] = `
<div
  class="Hook-error Hook-gutters"
  data-testid="error"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root-161 MuiSvgIcon-colorDisabled-166"
    focusable="false"
    role="presentation"
    style="font-size: 80px;"
    viewBox="0 0 24 24"
  >
    <path
      d="M15.73 3H8.27L3 8.27v7.46L8.27 21h7.46L21 15.73V8.27L15.73 3zM12 17.3c-.72 0-1.3-.58-1.3-1.3 0-.72.58-1.3 1.3-1.3.72 0 1.3.58 1.3 1.3 0 .72-.58 1.3-1.3 1.3zm1-4.3h-2V7h2v6z"
    />
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
  </svg>
  <p
    class="MuiTypography-root-170 MuiTypography-body1-179 Hook-text"
  >
    Oops, something went wrong
  </p>
  <button
    class="MuiButtonBase-root-231 MuiButton-root-205 MuiButton-text-207 MuiButton-textPrimary-208 MuiButton-flat-210 MuiButton-flatPrimary-211"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-206"
    >
      Retry
    </span>
    <span
      class="MuiTouchRipple-root-234"
    />
  </button>
</div>
`;
